[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "serena"
version = "0.9.1"
description = "An AMQP 0-9-1 client using AnyIO."
authors = ["Lura Skye <l@veriny.tf>"]
license = "LGPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Framework :: AnyIO",
    "Typing :: Typed"
]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.11"
anyio = ">=4.2.0"
attrs = ">=23.2.0"
outcome = ">=1.3.0.post0"
typing-extensions = {version = ">=4.9.0"}

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.2.6"
sphinx-rtd-theme = ">=2.0.0"
sphinxcontrib-trio = ">=1.1.2"
sphinx-inline-tabs = ">=2023.4.21"
sphinx-autodoc-typehints = ">=1.25.3"


[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
trio = ">=0.24.0"
pytest-cov = ">=4.1.0"
ruff = ">=0.5.0"
mypy = ">=1.8.0"
pyright = ">=1.1.370"


[tool.pytest.ini_options]
log_cli_level = "1"
log_cli = true
addopts = "--cov --cov-report=html -m 'not slow and not rabbitmq and not rabbitmq_extensions'"
markers = [
    "slow: tests that are slow",
    "rabbitmq: tests that only work on rabbitmq",
    "rabbitmq_extensions: tests that use rabbitmq extensions"
]

[tool.coverage.run]
branch = true
source = ["serena"]

[tool.coverage.report]
exclude_lines = [
    # standard tthings
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",

    # these are only used if the server is really fucking up and so don't matter.
    "raise AMQPStateError",
    "raise InvalidPayloadTypeError",
]

[tool.ruff]
target-version = "py311"
respect-gitignore = true
# fix = true
src = ["src/serena"]
line-length = 100

[tool.ruff.lint]
select = [
  "RUF",
  "F",
  "E",
  "W",
  "I",
  "UP",
  "B",
  "YTT",
  "ASYNC",
  "PYI",
  "SIM",
  "RET",
  "PERF",
]
ignore = [
    "W291",
    "W293",
    "E266",
    "RUF018"
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.extend-per-file-ignores]
# why the fuck is this not the default?
"__init__.py" = ["E402", "F401"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
typeCheckingMode = "strict"

reportImplicitOverride = "warning"
reportUnusedVariable = false
reportPrivateUsage = false

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

local_partial_types = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true

disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
check_untyped_defs = true
